examples/gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: openzro-public
spec:
  controllerName: "gateway.openzro.io/controller"
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: openzro-private
spec:
  controllerName: "gateway.openzro.io/controller"
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: private
  namespace: openzro
spec:
  gatewayClassName: openzro-private
  listeners:
  - protocol: gateway.openzro.io/NetworkRouter
    name: openzro
    port: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
  namespace: openzro
spec:
  gatewayClassName: openzro-public
  listeners:
  - protocol: gateway.openzro.io/NetworkRouter
    name: openzro
    port: 1
