examples/gateway-api/kubernetes.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: kubernetes
  namespace: default
spec:
  parentRefs:
  - name: private
    namespace: openzro
  rules:
  - backendRefs:
    - name: kubernetes
      port: 443
